src/tests/integration/snapshots/mosaic__tests__integration__move_focus_right__move_focus_right_to_the_largest_overlap.snap
---
source: src/tests/integration/move_focus_right.rs
expression: snapshot
---
█                                                                                                                        
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
